# QuakePrism

./: CMakeLists.txt  build.sh  build_windows.sh  toolchain-mingw64.cmake
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: TextEditor.h  theme.h
